--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "firebase-admin": "^9.4.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "swig": "^1.4.2"
